# code-through

./: .gitignore  .gitmodules  Makefile  README.md  cli.py  code-through  docker-compose.yaml  hermes  package-lock.json  package.json  pyproject.toml  requirements.txt  run_agent.py  setup-hermes.sh  toolset_distributions.py
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
acp_registry/: agent.json
agent/: auxiliary_client.py  prompt_builder.py
docs/: acp-setup.md
environments/tool_call_parsers/: hermes_parser.py  mistral_parser.py
hermes_cli/: __init__.py  banner.py  codex_companion.py  commands.py  config.py  main.py  pairing.py  skin_engine.py  uninstall.py
memo/: memory_architecture.md
scripts/: devcontainer-exec.sh  hermes-gateway  kill_modal.sh  sample_and_compress.py
skills/autonomous-ai-agents/claude-code/: SKILL.md
skills/autonomous-ai-agents/hermes-agent/: SKILL.md
skills/github/github-auth/: SKILL.md
skills/github/github-auth/scripts/: gh-env.sh
skills/github/github-code-review/: SKILL.md
skills/github/github-issues/: SKILL.md
skills/github/github-pr-workflow/: SKILL.md
skills/github/github-repo-management/: SKILL.md
skills/media/youtube-content/: SKILL.md
skills/music-creation/: DESCRIPTION.md
skills/research/arxiv/: SKILL.md
tests/: test_cli_commit_command.py  test_cli_init.py  test_cli_natural_language.py  test_cli_provider_resolution.py  test_cli_skin_integration.py  test_codex_companion.py  test_quick_commands.py  test_run_agent_codex_responses.py
tests/hermes_cli/: test_commands.py  test_local_launchers.py  test_models.py  test_skin_engine.py  test_workspace_option.py
tests/integration/: test_modal_terminal.py
tests/tools/: test_cronjob_tools.py  test_fuzzy_match.py  test_process_registry.py
tools/: clarify_tool.py  debug_helpers.py  fuzzy_match.py  interrupt.py  mixture_of_agents_tool.py
